# NFL_Data

./: .gitignore  database.py  pipeline.py  players.py  pyproject.toml  scraping.py  teams.py  testing.py
