[project]
name = "nfl-data"
version = "0.1.0"
description = ""
authors = [
    {name = "prasunnyD",email = "prasun.sharma730@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "polars (>=1.31.0,<2.0.0)",
    "prefect (>=3.4.10,<4.0.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "pyarrow (>=14.0.0,<15.0.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "nfl-data-py (>=0.3.3,<0.4.0)",
    "lxml (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
